<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pirateria.LoginActivity" >

    <EditText
        android:id="@+id/UsernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username_string" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/PasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/UsernameField"
        android:layout_below="@+id/UsernameField"
        android:ems="10"
        android:hint="@string/password_string"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Login_label" />

    <TextView
        android:id="@+id/signup_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/signup_text" />

</RelativeLayout>
